--- a/references.bib
+++ b/references.bib
@@ -1,84 +1,25 @@
-@article{wang2019symbolic,
-  title={Symbolic regression in materials science},
-  author={Wang, Yiqun and Wagner, Nicholas and Rondinelli, James M},
-  journal={MRS communications},
-  volume={9},
-  number={3},
-  pages={793--805},
-  year={2019},
-  publisher={Cambridge University Press}
-}
-
-@article{su2012linear,
-  title={Linear regression},
-  author={Su, Xiaogang and Yan, Xin and Tsai, Chih-Ling},
-  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
-  volume={4},
-  number={3},
-  pages={275--294},
-  year={2012},
-  publisher={Wiley Online Library}
-}
-
-@article{adams2021topology,
-  title={Topology applied to machine learning: From global to local},
-  author={Adams, Henry and Moy, Michael},
-  journal={Frontiers in Artificial Intelligence},
-  volume={4},
-  pages={668302},
+@article{NIH,
+  title={A predictive model, and predictors of under-five child malaria prevalence in Ghana},
+  author={Aheto JMK, Duah HO, Agbadi P, Nakua EK},
+  journal={Prev Med Rep.},
+  volume={10.1016/j.pmedr.2021.101475},
+  PMID={34306999},
+  PMCID={PMC8258678},
   year={2021},
-  publisher={Frontiers Media SA}
+  publisher={nih.gov}
 }
 
-
-
-@article{daffertshofer2004pca,
-  title={PCA in studying coordination and variability: a tutorial},
-  author={Daffertshofer, Andreas and Lamoth, Claudine JC and Meijer, Onno G and Beek, Peter J},
-  journal={Clinical biomechanics},
-  volume={19},
-  number={4},
-  pages={415--428},
-  year={2004},
-  publisher={Elsevier}
+@article{Maitlan,
+  title={Maitland K. Severe Malaria in African children},
+  author={the need for continuing investment},
+  journal={N. Engl. J. Med. 2016},
+  volume={375(25):2416–2417.doi},
+  publisher={10.1056/NEJMp1613528}
 }
 
-@article{wang2014,
-  title={Generalized estimating equations in longitudinal data analysis: a review and recent developments},
-  author={Wang, Ming},
-  journal={Advances in Statistics},
-  volume={2014},
-  year={2014},
-  publisher={Hindawi}
-}
-
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-           Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org},
-}
-
-@book{efr2008,
-  title={Nonparametric Curve Estimation: Methods, Theory, and Applications},
-  author={Efromovich, S.},
-  isbn={9780387226385},
-  lccn={99013253},
-  series={Springer Series in Statistics},
-  url={https://books.google.com/books?id=mdoLBwAAQBAJ},
-  year={2008},
-  publisher={Springer New York}
-}
-@article{bro2014principal,
-  title={Principal component analysis},
-  author={Bro, Rasmus and Smilde, Age K},
-  journal={Analytical methods},
-  volume={6},
-  number={9},
-  pages={2812--2831},
-  year={2014},
-  publisher={Royal Society of Chemistry}
+@article{Camponova,
+  title={Incidence and admission rates for severe malaria and their impact on mortality in Africa},
+  author={Camponovo F., Bever C.A., Galactionova K., Smith T., Penny M.A.},
+  journal={J. 2017;16(1) doi},
+  volume={10.1186/s12936-016-1650-6}
 }
