--- a/references.bib
+++ b/references.bib
@@ -23,3 +23,19 @@
   journal={J. 2017;16(1) doi},
   volume={10.1186/s12936-016-1650-6}
 }
+
+@article{wiley,
+  title={Prediction Modeling With Many Correlated and Zero-Inflated Predictors: Assessing the Nonnegative Garrote Approach},
+  author={Mariella Gregorich, Michael Kammer, Harald Mischak, Georg Heinze.},
+  journal={Volume 44, Issue 8-9},
+  year={2025},
+  volume={10.1002}
+}
+
+@article{gajjala,
+  title={Novel Plasma Peptide Markers Involved in the Pathology of CKD Identified Using Mass Spectrometric Approach},
+  author={P. R. Gajjala, H. Bruck, H. Noels, et al.,},
+  journal={Journal of Molecular Medicine 97 (2019)},
+  year={2019},
+  volume={1451–1463}
+}
