--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,23 @@
   year={2019},
   volume={1451–1463}
 }
+@article{sen,
+  title={Dealing with adverse drug reactions in the context of polypharmacy using regression models},
+  author={Jakob Sommer, Roberto Viviani, Justyna Wozniak, Julia C Stingl, Katja S Just},
+  journal={PMC PubMed Central},
+  volume={Sci Rep. 2024 Nov 9;14:27355. doi: 10.1038/s41598-024-78474-4},
+  PMID={37687863},
+  PMCID={39521861},
+  year={2024},
+  publisher={nih.gov}
+}
+@article{com,
+  title={A comparison of penalised regression methods for informing the selection of predictive markers},
+  author={Christopher J Greenwood, George J Youssef, Primrose Letcher et al.,},
+  journal={PMC PubMed Central},
+  volume={PLoS One. 2020 Nov 20;15(11):e0242730. doi: 10.1371/journal.pone.0242730},
+  PMID={33216811},
+  PMCID={PMC7678959},
+  year={2020},
+  publisher={nih.gov}
+}
