--- a/references.bib
+++ b/references.bib
@@ -39,6 +39,7 @@
   year={2019},
   volume={1451–1463}
 }
+
 @article{sen,
   title={Dealing with adverse drug reactions in the context of polypharmacy using regression models},
   author={Jakob Sommer, Roberto Viviani, Justyna Wozniak, Julia C Stingl, Katja S Just},
@@ -49,6 +50,7 @@
   year={2024},
   publisher={nih.gov}
 }
+
 @article{com,
   title={A comparison of penalised regression methods for informing the selection of predictive markers},
   author={Christopher J Greenwood, George J Youssef, Primrose Letcher et al.,},
@@ -58,4 +60,34 @@
   PMCID={PMC7678959},
   year={2020},
   publisher={nih.gov}
+}
+
+@article{USH,
+  title={Estimating U.S. housing price network connectedness: Evidence from dynamic Elastic Net, Lasso, and ridge vector autoregressive models},
+  author={David Gabauer, Rangan Gupta, Hardik A. Marfatia, Stephen M. Miller et al.,},
+  journal={International Review of Economics & Finance},
+  volume={Volume 89, Part B, January 2024, Pages 349-362},
+  year={2024},
+  publisher={https://doi.org/10.1016/j.iref.2023.10.013}
+}
+@article{diebold,
+  title={Better to give than to receive: Predictive directional measurement of volatility spillovers},
+  author={Diebold F.X., Yilmaz K.},
+  journal={International Journal of Forecasting, },
+  volume={28 (1) (2012), pp. 57-66},
+  year={2012}
+}
+@article{koop,
+  title={Impulse response analysis in nonlinear multivariate models},
+  author={Koop G., Pesaran M.H., Potter S.M},
+  journal={Journal of Econometrics},
+  volume={ 74 (1) (1996), pp. 119-147},
+  year={1996}
+}
+@article{shin,
+  title={Generalized impulse response analysis in linear multivariate models},
+  author={Pesaran H.H., Shin Y},
+  journal={Economics Letters},
+  volume={58 (1) (1998), pp. 17-29},
+  year={1998}
 }
