--- a/references.bib
+++ b/references.bib
@@ -91,3 +91,10 @@
   volume={58 (1) (1998), pp. 17-29},
   year={1998}
 }
+@article{corp,
+  title={The logistic lasso and ridge regression in predicting corporate failure},
+  author={Jose Manuel Pereira, Mario Bastoa, Amelia Ferreira da Silva},
+  journal={3rd GLOBAL CONFERENCE on BUSINESS, ECONOMICS, MANAGEMENT and TOURISM},
+  volume={Volume 39, 2016, Pages 634-641},
+  year={2016}
+}
